testdata/errors/typo_register.ral
config { }

regsiter foo: 32 { a: 32 }
